--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^5.5.4",
+    "@astrojs/node": "^9.0.0",
     "@astrojs/tailwind": "^5.1.0",
     "@google-cloud/documentai": "^8.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^4.16.18",
+    "astro": "^5.2.5",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.3.31",
     "tailwindcss": "^3.4.0"
