--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
   command = "npx astro build"
-  publish = "dist/client"
-
-[functions]
-  directory = "dist/server"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "18"
