--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,3 +3,12 @@
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@lib/*": ["src/lib/*"],
+      "@components/*": ["src/components/*"]
+    }
+  }
+}
