--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
-}
-{
+  "exclude": ["dist"],
+  {
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -11,4 +10,5 @@
       "@components/*": ["src/components/*"]
     }
   }
+}
 }
