--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
-  {
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@lib/*": ["src/lib/*"],
       "@components/*": ["src/components/*"]
     }
-  }
-}
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
