--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@lib/*": ["src/lib/*"],
+      "@lib/*": ["/src/lib/*"],
       "@components/*": ["src/components/*"]
     }
   },
